# free-stockdb

./: .gitignore  LICENSE  README.md  sync_url.txt  先看！这个！！使用说明.txt  数据网页版.html
cpp/: CMakeLists.txt
cpp/examples/: main.cpp
cpp/include/stockdb/: client.hpp  server.hpp  updater.hpp
cpp/src/: client.cpp  server.cpp  updater.cpp
cpp/tools/: main_server.cpp  main_updater.cpp
data/: 000005.ldb  010793.ldb.part  010794.ldb.part  010797.ldb.part  010878.ldb.part  010962.ldb.part  010963.ldb.part  011360.ldb.part  011361.ldb.part  011362.ldb.part  011363.ldb.part  LOG  LOG.old  MANIFEST-000004
docs/: DATA_SOURCE.md
pybao/: 314t+zb_core.pyd  stock_sdk.py  zb_core.pyd  zhibiao.py
stockdb/: README.md
stockdb/pybao/: 3.14t+stockdb.pyd  stockdb.pyd  安装.py  说明_运行-安装.py-即可任何地方调用stockdb类似pip.txt
stockdb/调用方式/http/: rd_test.py
stockdb/调用方式/python/: http_js.js
调用方式/: 调用说明.txt
调用方式/ai_mcp/: README.md  sdk_test.py
调用方式/excel/: 查看数据.html
调用方式/http/: http_api.py
调用方式/python/: http_js.js  sdk_test.py  stock_sdk.py  zb_test.py  调用.txt
